--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,90 +1,21 @@
 
 <div class="flex h-screen overflow-hidden bg-white">
-  <nav class="flex flex-col justify-between w-20 bg-white border-r">
-    <div class="mt-10 mb-10">
-      <a href="#">
-        <img src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=2070&amp;q=80" class="object-cover w-10 h-10 mx-auto mb-3 rounded-full">
-      </a>
-      <div class="mt-10">
-        <ul class="space-y-3">
-          <li>
-            <a href="#" class="text-gray-500 transition duration-200 ease-in-out transform hover:text-blue-500 focus:shadow-outline hover:scale-95">
-              <p class="mx-auto text-center">
-                <span class="w-5 h-5 mx-auto md hydrated" name="people-outline" data-dashlane-shadowhost="true" role="img" aria-label="people outline" data-dashlane-observed="true">😁</span>
-                <span class="sr-only">
-                  home
-                </span>
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-500 transition duration-200 ease-in-out transform hover:text-blue-500 focus:shadow-outline hover:scale-95">
-              <p class="mx-auto text-center">
-                <span class="w-5 h-5 mx-auto md hydrated" name="people-outline" data-dashlane-shadowhost="true" role="img" aria-label="people outline" data-dashlane-observed="true">😁</span>
-                <span class="sr-only">
-                  Notifications
-                </span>
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-500 transition duration-200 ease-in-out transform hover:text-blue-500 focus:shadow-outline hover:scale-95">
-              <p class="mx-auto text-center">
-                <span class="w-5 h-5 mx-auto md hydrated" name="people-outline" data-dashlane-shadowhost="true" role="img" aria-label="people outline" data-dashlane-observed="true">😁</span>
-                <span class="sr-only">
-                  analytics
-                </span>
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-500 transition duration-200 ease-in-out transform hover:text-blue-500 focus:shadow-outline hover:scale-95">
-              <p class="mx-auto text-center">
-                <span class="w-5 h-5 mx-auto md hydrated" name="people-outline" data-dashlane-shadowhost="true" role="img" aria-label="people outline" data-dashlane-observed="true">😁</span>
-                <span class="sr-only">
-                  Reports
-                </span>
-              </p>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-500 transition duration-200 ease-in-out transform hover:text-blue-500 focus:shadow-outline hover:scale-95">
-              <p class="mx-auto text-center">
-                <span class="w-5 h-5 mx-auto md hydrated" name="people-outline" data-dashlane-shadowhost="true" role="img" aria-label="people outline" data-dashlane-observed="true">😁</span>
-                <span class="sr-only">
-                  account
-                </span>
-              </p>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="mb-4">
-      <a href="#" class="text-gray-500 transition duration-200 ease-in-out transform hover:text-blue-500 focus:shadow-outline hover:scale-95">
-        <p class="mx-auto text-center">
-          <span class="w-5 h-5 mx-auto md hydrated" name="log-out-outline" data-dashlane-shadowhost="true" role="img" aria-label="log out outline" data-dashlane-observed="true">😎</span>
-
-          <span class="sr-only">
-            logout
-          </span>
-        </p>
-      </a>
-    </div>
-  </nav>
+  <shared-navbar></shared-navbar>
   <div class="flex flex-col flex-1 w-0 overflow-hidden">
     <main class="relative flex-1 overflow-y-auto focus:outline-none">
       <div class="py-6">
         <div class="px-4 mx-auto 2xl:max-w-7xl sm:px-6 md:px-8">
-          <!-- === Remove and replace with your own content... === -->
           <div class="py-4">
             <div class="h-screen border border-gray-200 border-dashed rounded-lg">
 
-              <button type="button" class="inline-block px-6 py-3 mr-3 font-bold text-center text-white uppercase align-middle transition-all rounded-lg cursor-pointer bg-gradient-to-tl from-purple-700 to-pink-500 leading-pro text-xs ease-soft-in tracking-tight-soft shadow-soft-md bg-150 bg-x-25 hover:scale-110 hover:rotate-2 hover:bg-pink-700 hover:text-pink-200 hover:shadow-lg active:opacity-85">Button</button>
+              <!-- <button (click)="onSave()" type="button" class="inline-block px-6 py-3 mr-3 font-bold text-center text-white uppercase align-middle transition-all rounded-lg cursor-pointer bg-gradient-to-tl from-purple-700 to-pink-500 leading-pro text-xs ease-soft-in tracking-tight-soft shadow-soft-md bg-150 bg-x-25 hover:scale-110 hover:rotate-2 hover:bg-pink-700 hover:text-pink-200 hover:shadow-lg active:opacity-85">Button</button>
+
+              {{ title}} -->
+
+                <auth-login-form></auth-login-form>
 
             </div>
           </div>
-          <!-- === End ===  -->
         </div>
       </div>
     </main>
