--- a/src/app/auth/components/login-form/login-form.component.html
+++ b/src/app/auth/components/login-form/login-form.component.html
@@ -26,7 +26,14 @@
             <input
               formControlName="username"
               class="block w-full px-6 py-3 text-black bg-white border border-gray-200 rounded-full appearance-none placeholder:text-gray-400 focus:border-blue-500 focus:outline-none focus:ring-blue-500 sm:text-sm"
-              placeholder="Username" autocomplete="off" type="text" >
+              placeholder="Username" type="text" >
+              <div class="opacity-50 text-sm text-red-700" *ngIf="loginForm.controls['username'].errors && loginForm.controls['username'].errors['required']">
+                La Nombre de usuario es requerido.
+              </div>
+              <div class="opacity-50 text-sm text-red-700" *ngIf="loginForm.controls['username'].errors && loginForm.controls['username'].errors['minlength']">
+                La Nombre de usuario debe tener al menos 3 caracteres.
+              </div>
+
           </div>
           <div class="col-span-full">
             <label class="block mb-3 text-sm font-medium text-gray-600" name="password">
@@ -36,11 +43,18 @@
               formControlName="password"
               class="block w-full px-6 py-3 text-black bg-white border border-gray-200 rounded-full appearance-none placeholder:text-gray-400 focus:border-blue-500 focus:outline-none focus:ring-blue-500 sm:text-sm"
               placeholder="******" autocomplete="off" type="password" >
+              <div class="opacity-50 text-sm text-red-700" *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].errors['required']">
+                La contraseña es requerida.
+              </div>
+              <div class="opacity-50 text-sm text-red-700" *ngIf="loginForm.controls['password'].errors && loginForm.controls['password'].errors['minlength']">
+                La contraseña debe tener al menos 6 caracteres.
+              </div>
           </div>
 
           <div class="col-span-full">
             <button
-              class="items-center justify-center w-full px-6 py-2.5 text-center text-white duration-200 bg-black border-2 border-black rounded-full nline-flex hover:bg-transparent hover:border-black hover:text-black focus:outline-none focus-visible:outline-black text-sm focus-visible:ring-black"
+              [disabled]="!loginForm.valid"
+              class="items-center justify-center w-full px-6 py-2.5 text-center text-white duration-200 bg-black border-2 border-black rounded-full nline-flex hover:bg-transparent hover:border-black hover:text-black focus:outline-none focus-visible:outline-black text-sm focus-visible:ring-black disabled:opacity-80 disabled:cursor-not-allowed"
               type="submit">
               Submit your request
             </button>
