agregar rutas al app module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,1 @@
-
-<div class="flex h-screen overflow-hidden bg-white">
-  <shared-navbar></shared-navbar>
-  <div class="flex flex-col flex-1 w-0 overflow-hidden">
-    <main class="relative flex-1 overflow-y-auto focus:outline-none">
-      <div class="py-6">
-        <div class="px-4 mx-auto 2xl:max-w-7xl sm:px-6 md:px-8">
-          <div class="py-4">
-            <div class="h-screen border border-gray-200 border-dashed rounded-lg">
-
-              <!-- <button (click)="onSave()" type="button" class="inline-block px-6 py-3 mr-3 font-bold text-center text-white uppercase align-middle transition-all rounded-lg cursor-pointer bg-gradient-to-tl from-purple-700 to-pink-500 leading-pro text-xs ease-soft-in tracking-tight-soft shadow-soft-md bg-150 bg-x-25 hover:scale-110 hover:rotate-2 hover:bg-pink-700 hover:text-pink-200 hover:shadow-lg active:opacity-85">Button</button>
-
-              {{ title}} -->
-
-                <auth-login-form></auth-login-form>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
-</div>
+<router-outlet></router-outlet>
