--- a/src/app/auth/components/login-form/login-form.component.html
+++ b/src/app/auth/components/login-form/login-form.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-20 max-w-7xl">
+  <div class="relative items-center w-full mx-auto max-w-7xl">
     <div class="w-full max-w-md mx-auto md:max-w-sm md:px-0 md:w-96 sm:px-4">
       <div class="flex flex-col">
         <div>
@@ -61,6 +61,8 @@
           </div>
         </div>
       </form>
+
+      <a routerLink="/auth/register">¿No tienes una cuenta? registrate</a>
 
     </div>
   </div>
