--- a/src/app/shared/views/layout/layout.component.html
+++ b/src/app/shared/views/layout/layout.component.html
@@ -5,7 +5,7 @@
       <div class="py-6">
         <div class="px-4 mx-auto 2xl:max-w-7xl sm:px-6 md:px-8">
           <div class="py-4">
-            <div class="h-screen border border-gray-200 border-dashed rounded-lg">
+            <div class="min-h-screen border border-gray-200 border-dashed rounded-lg">
               <router-outlet></router-outlet>
             </div>
           </div>
